--- a/app.env
+++ b/app.env
@@ -1,4 +1,4 @@
-DSN='host=db user=postgres password=59%9#8MYh&j0 dbname=shepays_nsdl port=5432 sslmode=disable TimeZone=Asia/Shanghai'
+DSN='host=localhost user=postgres password=postgres dbname=shepays_nsdl port=5432 sslmode=disable TimeZone=Asia/Shanghai'
 SERVER_ADDRESS=:8080
 GIN_MODE=debug
 APP_ID=app_63e8e48e3b3911edb32a0242ac110006
@@ -9,3 +9,4 @@ CHANNEL_ID=wxMZUMcaOehjHaEDdmok
 APP_ID=com.shepays.nsdlpb
 APP_VERSION=1.3.87
 APP_REG_FLAG=01
+AUTH_API_KEY=feiuf7ew8$C)Y
